# WeixinChatExportUtil

./: .electron-builderignore  .gitignore  README.md  electron-builder.base.json  electron-builder.full.json  electron-builder.standard.json  export.js  package-lock.json  package.json
.github/workflows/: build-wetrace-full.yml  build-wexin-hook.yml
assets/dll/: README.md
assets/dll/Release/: wexin_hook.exp  wexin_hook.lib
electron/: exportWorker.js  main.js  preload.js
electron/renderer/: app.js  index.html  styles.css
lib/: conversationCache.js  decryptCore.js  decryptDb.js  exportCore.js  exportFormats.js  keyImport.js  keyScan.js  passphraseScan.js  scanUtils.js  voiceMedia.js  voiceTranscription.js  wechatProcess.js  wechatStatus.js  winMemory.js  wxKeyHook.js
native/wexin-hook/: CMakeLists.txt
native/wexin-hook/include/: remote_hooker.h  remote_memory.h  remote_scanner.h  shared_key_data.h  wexin_hook_api.h  win32_util.h
native/wexin-hook/src/: dllmain.cpp  hook_engine.cpp  remote_hooker.cpp  remote_scanner.cpp  win32_util.cpp
scripts/: build-wexin-hook.ps1  download-whisper-model.js  ensure-sharp-stub.js  test-decrypt.js
